--- a/public/screen.css
+++ b/public/screen.css
@@ -1,12 +1,236 @@
 :root {
-  font: 16px / 1 sans-serif;
+	font: 16px / 1 sans-serif;
 }
 
 html {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-  margin: 0;
-  min-height: 100%;
+	margin: 0;
+	min-height: 100%;
+	background-color: rgb(51, 51, 51);
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+}
+
+img {
+	width: 95%;
+	height: auto;
+	margin: 0.5rem;
+}
+
+.photos {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.title {
+	text-align: center;
+	font-size: 26px;
+	margin-top: 4rem;
+	margin-bottom: 4rem;
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
+}
+
+.name {
+	margin-top: 2rem;
+	margin-left: 0.5rem;
+}
+
+ul {
+	display: flex;
+	list-style: none;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	align-items: center;
+	margin-bottom: 4rem;
+	margin-left: none;
+}
+
+li {
+	color: rgb(130, 129, 130);
+	font-size: 0.75rem;
+	margin-right: 0.5rem;
+	margin-top: 0.5rem;
+}
+
+header {
+	font-weight: bold;
+}
+
+.red-text {
+	color: rgb(252, 95, 98);
+}
+
+.final-words {
+	text-align: center;
+	font-weight: bold;
+	margin-top: 3rem;
+	font-size: 26px;
+}
+
+.contact-button p {
+	text-align: center;
+	background-color: black;
+	padding: 1rem;
+	width: 5rem;
+	margin: 0 auto;
+	font-size: 0.75rem;
+	margin-bottom: 4rem;
+}
+
+.non-mobile {
+	display: none;
+}
+
+.photos-desktop {
+	display: none;
+}
+
+@media (min-width: 768px) {
+	.last-item {
+		margin-top: 0;
+		margin-right: 2rem;
+	}
+
+	ul {
+		justify-content: flex-start;
+	}
+
+	.alt-nav li {
+		margin: 1.5rem;
+	}
+
+	img {
+		width: 50%;
+		height: 20rem;
+		object-fit: cover;
+	}
+
+	.row-1 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.row-2 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.row-3 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.row-4 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.non-mobile {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		flex-direction: row;
+		align-items: center;
+	}
+
+	.non-mobile li {
+		color: rgb(49, 194, 225);
+		margin: 1rem;
+	}
+
+	.non-mobile-name {
+		margin-left: 4rem;
+	}
+	.main-nav {
+		margin-top: 4rem;
+	}
+
+	.name {
+		display: none;
+	}
+
+	.contact-button-top {
+		margin-left: 3rem;
+		margin-right: 4rem;
+		padding: 1rem;
+		background-color: black;
+		font-size: 0.75rem;
+	}
+
+	.title {
+		font-size: 56px;
+		margin-top: 1rem;
+	}
+
+	.photos-desktop {
+		display: none;
+	}
+}
+
+@media (min-width: 1025px) {
+	.photos {
+		display: none;
+	}
+
+	.row-a1 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.row-a1 img {
+		height: 35rem;
+		width: 50%;
+	}
+
+	.row-a2 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.row-a2 img {
+		height: auto;
+		width: 32.75%;
+	}
+
+	.row-a3 {
+		display: flex;
+		justify-items: center;
+	}
+
+	.row-a3 img {
+		width: 125%;
+		height: 35rem;
+		margin-left: 0;
+		margin-right: 0;
+	}
+
+	.row-a4 {
+		display: flex;
+		justify-content: center;
+	}
+
+	.row-a4 img {
+		height: 35rem;
+		width: 50%;
+	}
+
+	.non-mobile {
+		justify-content: space-between;
+		margin-left: 4rem;
+		margin-right: 4rem;
+	}
+
+	.title {
+		margin-left: 10rem;
+		margin-right: 10rem;
+	}
+
+	.photos-desktop {
+		display: block;
+	}
 }
